<resources>
    <string name="app_name">Firebase</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_age">Enter Age</string>
    <string name="enter_e_mail">Enter E-mail</string>
    <string name="update_user">Update User</string>
    <string name="enter_name2">Enter Name</string>
    <string name="enter_age2">Enter Age</string>
    <string name="enter_e_mail2">Enter E-mail</string>
    <string name="add_user2">Add User</string>
    <string name="fab">Fab</string>
    <string name="delete_all_users">Delete All Users</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="enter_your_password">Enter your Password</string>
    <string name="sign_out">Sign Out</string>
    <string name="enter_your_email_address">Enter Your Email Address</string>
    <string name="button">Button</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="send_sms">Send SMS</string>
    <string name="sms_verification_code">SMS Verification Code</string>
    <string name="verify_code">Verify Code</string>
    <string name="to_select_a_profile_image_click_on_the_picture">To select a profile image, click on the picture</string>
    <string name="todo">TODO</string>
    <string name="todo2">TODO</string>
    <string name="text_view">Text View</string>
    <string name="text_view2">Text View</string>
    <string name="text_view3">Text View</string>
    <string name="log_in_with_phone_number">Log In With Phone Number</string>
</resources>