<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddUserActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <ImageView
        android:id="@+id/ivUserImage"
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:layout_margin="5dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/account_box"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/to_select_a_profile_image_click_on_the_picture" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_margin="5dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_name2"
        android:inputType="textPersonName"
        android:textSize="20sp"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/etAge"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_margin="5dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_age2"
        android:inputType="number"
        android:textSize="20sp"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_margin="5dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_e_mail2"
        android:inputType="textEmailAddress"
        android:textSize="20sp"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/buttonAddUser"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_margin="10dp"
        android:text="@string/add_user2"
        android:textSize="18sp" />

    <ProgressBar
        android:id="@+id/pbAddUser"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible" />
</LinearLayout>