<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateUserActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <EditText
        android:id="@+id/etUpdateName"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_margin="10dp"
        android:autofillHints="Name"
        android:ems="10"
        android:hint="@string/enter_name"
        android:inputType="textPersonName"
        android:textSize="20sp"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/etUpdateAge"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_margin="10dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_age"
        android:inputType="number"
        android:textSize="20sp"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/etUpdateEmail"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_margin="10dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_e_mail"
        android:inputType="textEmailAddress"
        android:textSize="20sp"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/buttonUpdateUser"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        android:text="@string/update_user"
        android:textSize="18sp" />
</LinearLayout>